@@ -204,4 +204,4 @@ macrodata_result = array(
        (2009.0, 1.0, 12925.41, 9209.2, 1558.494, 996.287, 9926.4, 212.671, 1592.8, 0.22, 8.1, 306.547, 0.94, -0.71),
        (2009.0, 2.0, 12901.504, 9189.0, 1456.678, 1023.528, 10077.5, 214.469, 1653.6, 0.18, 9.2, 307.226, 3.37, -3.19),
        (2009.0, 3.0, 12990.341, 9256.0, 1486.398, 1044.088, 10040.6, 216.385, 1673.9, 0.12, 9.6, 308.013, 3.56, -3.44)],
-      dtype=[('year', '<f8'), ('quarter', '<f8'), ('realgdp', '<f8'), ('realcons', '<f8'), ('realinv', '<f8'), ('realgovt', '<f8'), ('realdpi', '<f8'), ('cpi', '<f8'), ('m1', '<f8'), ('tbilrate', '<f8'), ('unemp', '<f8'), ('pop', '<f8'), ('infl', '<f8'), ('realint', '<f8')])
+      dtype=[('year', '<i4'), ('quarter', '<i2'), ('realgdp', '<f4'), ('realcons', '<f4'), ('realinv', '<f4'), ('realgovt', '<f4'), ('realdpi', '<f4'), ('cpi', '<f4'), ('m1', '<f4'), ('tbilrate', '<f4'), ('unemp', '<f4'), ('pop', '<f4'), ('infl', '<f4'), ('realint', '<f4')])
